# VigenereRs

./: Cargo.toml  README.md
.github/workflows/: main.yml  rust.yml
src/: engine.rs  lib.rs  main.rs
tests/: test_lib.rs
tests/data/: text.txt
