[package]
name = "vigenere"
description = "Toy program to encrypt, decrypt, and crack classic Vigenere cipher (english only)."
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.md"
repository = "https://github.com/Swelio/VigenereRs.git"
readme = "README.md"
keywords = ["education", "cryptography"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["default", "derive"] }
